# 24205-atayants-oop-cpp

./: CMakeLists.txt  CSV-Loader.cpp  CSV-Loader.h  CsvWriter.cpp  CsvWriter.h  FileReader.cpp  FileReader.h  MergeWordCount.cpp  MergeWordCount.h  Normalizer.cpp  Normalizer.h  Parser.cpp  Parser.h  StatisticsCollector.cpp  StatisticsCollector.h  TotalWords.cpp  TotalWords.h  WordCounter.cpp  WordCounter.h  main.cpp  normalize.cpp  normalize.h
Task-0/src/: CsvWriter.cpp  FileReader.h  Parser.cpp  Parser.h  StatisticsCollector.cpp  WordStat.cpp  main.cpp
Task-0/tests/: ParserTest.cpp
Task-1/: CMakeLists.txt
Task-1/src/: BitArray.cpp  BitArray.h  main.cpp
Task-2/: CMakeLists.txt
Task-2/src/: AppSupport.cpp  AppSupport.h  Command.cpp  Command.h  ConsoleUI.cpp  ConsoleUI.h  Engine.cpp  Engine.h  Parser.cpp  Parser.h  Rule.cpp  Rule.h  Universe.cpp  Universe.h  main.cpp
Task-2/test/: CommandTest.cpp  EngineTest.cpp  ParserTest.cpp  RuleTest.cpp  UniverseTest.cpp
src/: BitArray.cpp  BitArray.h  CsvWriter.cpp  CsvWriter.h  FileReader.cpp  FileReader.h  Parser.h  StatisticsCollector.cpp  StatisticsCollector.h  WordCounter.cpp  WordCounter.h  WordStat.cpp  WordStat.h  main.cpp
test/: BitArrayTest.cpp
tests/: ParserTest.cpp  StatisticsCollectorTest.cpp
